--- a/src/scss/08-utilities/_utility-giphy.scss
+++ b/src/scss/08-utilities/_utility-giphy.scss
@@ -12,3 +12,9 @@
   font-size: $ty_font-size-xsmall;
   margin-top: $sp_variable-xxs;
 }
+
+.giphy-embed { // giphy <iframe> class
+  @include mq($until: tablet) {
+    width: 100%;
+  }
+}
